add hover states

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <div class="btns">
                 <button class="btn download-btn">Download <span class="version">v1.3</span></button>
-                <button class="btn">What is it?</button>
+                <button class="btn info-btn">What is it?</button>
             </div>
         </div>
     </section>
@@ -57,7 +57,7 @@
         <div class="download-description">
             <h2>Experience more together</h2>
             <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-            <button class="btn download-btn">Download <span class="version"> v1.3</span></button>
+            <button class="btn download-btn download-btn-purple">Download <span class="version"> v1.3</span></button>
         </div>
     </section>
 </body>
